# affw_control

./: .gitignore  CMakeLists.txt  README.md  package.xml
affw_ctrl/: CMakeLists.txt  package.xml
affw_ctrl/lib/: CMakeLists.txt
affw_ctrl/lib/affw/: CMakeLists.txt
affw_ctrl/lib/affw/include/affw/: Config.h  affw.h  affw_common.h
affw_ctrl/lib/affw/include/affw/learner/: DummyLearner.h  FANNLearner.h  FeedbackController.h  LWPRLearner.h  ModelLearner.h  OESGPLearner.h  OSVRLearner.h  RLSESNLearner.h  RLSLearner.h  SOGPLearner.h  STORKGPLearner.h  WrapperLearner.h
affw_ctrl/lib/affw/include/affw/mapping/: DataMapper.h  KTermStateTarget2ActionCompMapper.h
affw_ctrl/lib/affw/include/affw/otl/: OESGPasync.h  STORKGP_async.h  otl_rls_osn.h
affw_ctrl/lib/affw/include/affw/util/: DelayEstimator.h
affw_ctrl/lib/affw/src/: Config.cpp  affw.h
affw_ctrl/lib/affw/src/learner/: DummyLearner.cpp  DummyLearner.h  FANNLearner.cpp  FANNLearner.h  FeedbackController.cpp  FeedbackController.h  LWPRLearner.cpp  LWPRLearner.h  ModelLearner.cpp  ModelLearner.h  OESGPLearner.cpp  OESGPLearner.h  OSVRLearner.cpp  RLSESNLearner.cpp  RLSLearner.cpp  SOGPLearner.cpp  STORKGPLearner.cpp  WrapperLearner.cpp  WrapperLearner.h
affw_ctrl/lib/affw/src/mapping/: DataMapper.cpp  KTermStateTarget2ActionCompMapper.cpp
affw_ctrl/lib/affw/src/osvr/: Example  OnlineSVR  Sin.svr
affw_ctrl/lib/affw/src/otl/: OESGPasync.cpp  STORKGP_async.cpp  otl_rls_osn.cpp
affw_ctrl/lib/affw/src/test/: batchLearnOTL.cpp  lwprPerfTest.cpp  testDelayEstimator.cpp  testLearner.cpp
affw_ctrl/lib/affw/src/util/: DelayEstimator.cpp  affw_factory.cpp  pidnn.c
affw_ctrl/lib/include/affw/: Config.h
affw_ctrl/lib/include/affw/learner/: DummyLearner.h  FANNLearner.h  FeedbackController.h  LWPRLearner.h  ModelLearner.h  WrapperLearner.h
affw_ctrl/lib/include/affw/mapping/: DataMapper.h  KTermStateTarget2ActionCompMapper.h
affw_ctrl/lib/src/: Config.cpp
affw_ctrl/lib/src/learner/: DummyLearner.cpp  FANNLearner.cpp  FeedbackController.cpp  LWPRLearner.cpp  ModelLearner.cpp  WrapperLearner.cpp
affw_ctrl/lib/src/mapping/: KTermStateTarget2ActionCompMapper.cpp
affw_ctrl/lib/test/: batchLearnFann.cpp  batchLearnOTL.cpp  testLearner.cpp
affw_ctrl/src/: affw_ctrl.cpp
affw_ctrl/src/learner/: Config.cpp  Config.h  DummyLearner.cpp  DummyLearner.h  LWPRLearner.cpp  LWPRLearner.h  ModelLearner.cpp  ModelLearner.h
affw_export/: CMakeLists.txt  package.xml
affw_export/launch/: export_all.launch  export_tracked.launch
affw_export/scripts/: backupFiles.sh
affw_export/src/: affw_export.cpp
affw_joy/: CMakeLists.txt  package.xml
affw_joy/launch/: joy.launch  joy_tracked.launch
affw_joy/src/: angle_math.cpp  angle_math.h  joy2vel.cpp  joy2vel2.cpp  joy2velWithJerk.cpp  traj_2order.cpp  traj_2order.h  traj_generator.cpp  traj_generator.h
affw_msgs/: CMakeLists.txt  package.xml
affw_msgs/msg/: ProcTime.msg  State.msg  TargetRequest.msg
affw_msgs/srv/: ActionRequest.srv
affw_pos2vel/: CMakeLists.txt  package.xml
affw_pos2vel/src/: affw_pos2vel.cpp  affw_pos2vel_msf.cpp
affw_traj/: CMakeLists.txt  package.xml
affw_traj/launch/: trajectory.launch  trajectory_tracked.launch
affw_traj/src/: affw_traj.cpp
export_movement_data/: CMakeLists.txt  package.xml
export_movement_data/src/: export_movement_data.cpp
msg/: State.msg  TargetRequest.msg
src/: DummyLearner.cpp  DummyLearner.h  LWPRLearner.cpp  LWPRLearner.h  ModelLearner.cpp  ModelLearner.h  affw_ctrl.cpp
srv/: ActionRequest.srv
