<?xml version="1.0"?>
<package>
  <name>affw_ctrl</name>
  <version>1.0.0</version>
  <description>A adaptive feedforward controller for unmanned ground vehicles</description>

  <maintainer email="nicolai.ommer@gmail.com">Nicolai Ommer</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>affw_msgs</build_depend>
  <run_depend>affw_msgs</run_depend>
</package>
