<?xml version="1.0"?>
<package>
  <name>affw_joy</name>
  <version>0.0.0</version>
  <description>Joystick control</description>

  <maintainer email="nicolai.ommer@gmail.com">Nicolai Ommer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  
</package>