<?xml version="1.0"?>
<package>
  <name>affw_msgs</name>
  <version>0.0.0</version>
  <description>The affw_msgs package</description>

  <maintainer email="nicolai.ommer@gmail.com">Nicolai Ommer</maintainer>


  <license>BSD</license>


  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>