<?xml version="1.0"?>
<package>
  <name>affw_traj</name>
  <version>1.0.0</version>
  <description>Execute trajectory for testing affw_ctrl</description>

  <maintainer email="nicolai.ommer@gmail.com">Nicolai Ommer</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>affw_ctrl</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>affw_ctrl</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>tf</run_depend>
</package>
