<?xml version="1.0"?>
<package>
  <name>export_movement_data</name>
  <version>0.0.0</version>
  <description>The ssl_robot_export package</description>

  <maintainer email="nicolai.ommer@gmail.com">Nicolai Ommer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>